Mostly-automated reformat.
Including some moving and rewording of comments. But this should not include
any actual code changes, I don't think.